3lab/interface.ATG
#include <iostream>
#include "header/interface.h"
#include "header/figure.h"

static Interface interface;

COMPILER Interface

CHARACTERS
    letter = 'A'..'Z' + 'a'..'z'.
    digit = "0123456789".
    cr = '\r'. lf = '\n'. tab = '\t'.

TOKENS
    Num = {"-"} digit { digit } {"."} {digit}.

IGNORE cr + lf + tab

PRODUCTIONS

    Interface = S { S }.

    S =
        "octagon"                          (. coordinates_t data; data.resize(8); .)
        SetOctagon<data>                   (. interface.add_octagon(data); .)
        |
        "triangle"                         (. coordinates_t data; data.resize(3); .)
        SetTriangle<data>                  (. interface.add_triangle(data); .)
        |
        "square"                           (. coordinates_t data; data.resize(4); .)
        SetSquare<data>                    (. interface.add_square(data); .)
        |
        "print" Num                        (. int i = std::stoi(t->val);
                                              interface.print_figure(i - 1); .)
        |
        "area" Num                         (. int i = std::stoi(t->val);
                                              interface.print_area(i - 1); .)
        |
        "center" Num                       (. int i = std::stoi(t->val);
                                              interface.print_center(i - 1); .)
        |
        "remove" Num                       (. int i = std::stoi(t->val);
                                              interface.remove_figure(i - 1); .)
        |
        "PRINT"                            (. interface.print_all(); .)
        |
        "AREA"                             (. interface.areas_all(); .)
        |
        "CENTER"                           (. interface.centers_all(); .)
        |
        "SUM"                              (. interface.summary_area(); .)
    .

    SetOctagon<. coordinates_t& data .>    (. double x, y; .)
        = "(" Num                          (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[0] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[1] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[2] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[3] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[4] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[5] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[6] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[7] = {x, y}; .)
        ")"
    .

    SetTriangle<. coordinates_t& data .>   (. double x, y; .)
        = "(" Num                          (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[0] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[1] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[2] = {x, y}; .)
        ")"
    .

    SetSquare<. coordinates_t& data .>     (. double x, y; .)
        = "(" Num                          (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[0] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[1] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[2] = {x, y}; .)
        "),"
        "(" Num                            (. x = wcstod(t->val, NULL); .)
        "," Num                            (. y = wcstod(t->val, NULL);
                                              data[3] = {x, y}; .)
        ")"
    .



END Interface.
